JRA CP-1452 side-menu overlapping issue fixed

--- a/app/styles/partials/_dashboard.scss
+++ b/app/styles/partials/_dashboard.scss
@@ -390,6 +390,7 @@
     display: none;
   }
   position: fixed;
+  z-index: 9;
   width: 200px;
   background: #434A4F;
   height: 100%;
